# string

./: .CLANGD  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  string.hpp
src/sample/: utf8bom.txt
